--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,8 +41,9 @@ ul{
 
 .container{
     width: 1200px;
-    margin-left: 15px;
-    margin-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
 }
 .header{
     margin-top: 0;
@@ -125,6 +126,7 @@ ul{
 
 
 .button{
+    display: inline-block;
     color: var(--primary-white-color);
     background-color: var(--accent-color);
     font-weight: 700;
@@ -133,6 +135,7 @@ ul{
     letter-spacing: 0.06em;
     border-color: transparent;
     border-radius: 4px;
+    padding: 10px 32px;
 }
 
 /* Feature */
@@ -246,6 +249,9 @@ footer .container{
     font-size: 16px;
     line-height: 1.6;
     letter-spacing: 0.03em;
+    border-radius: 4px;
+    border-color: transparent;
+    padding: 6px 22px;
 }
 
 button:hover,
