--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,276 +5,375 @@
 /* акцент #2196F3; */
 /* герой и футер фон #2F303A; */
 
-:root{
-    --primary-text-color: #757575;
-    --title-text-color: #212121;
-    --accent-color: #2196F3;
-    --primary-white-color: #FFFFFF;
-    --secondary-background-color: #F5F4FA;
-    --hero-bgr-color: #2F303A;
+:root {
+  --primary-text-color: #757575;
+  --title-text-color: #212121;
+  --accent-color: #2196f3;
+  --primary-white-color: #ffffff;
+  --secondary-background-color: #f5f4fa;
+  --hero-bgr-color: #2f303a;
 }
 
-body{
-    color: var(--primary-text-color);
-    background-color: var(--primary-white-color);
-    font-family: Roboto, sans-serif;
-    letter-spacing: 0.03em;
+body {
+  color: var(--primary-text-color);
+  background-color: var(--primary-white-color);
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
 }
 
 h1,
 h2,
-h3{
-    margin-top: 0;
-    margin-bottom: 0;
+h3 {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-h3{
-    margin-bottom: 10px;
+h3 {
+  margin-bottom: 10px;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
-ul{
-    list-style: none;
+ul {
+  list-style: none;
+  padding-left: 0;
 }
 
-.container{
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 0 auto;
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
 }
-.header{
-    margin-top: 0;
-    margin-bottom: 0;
+.header {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.container.main-nav {
+  display: flex;
+  align-items: center;
 }
 
 /* Logo */
 
-.logo{
-    color: var(--title-text-color);
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
-    margin-top: 0;
-    margin-bottom: 0;
+.logo {
+  color: var(--title-text-color);
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 93px;
 }
-.accent{
-    color: var(--accent-color);
-    };
+.accent {
+  color: var(--accent-color);
+}
 
-    /*Site Nav */
+/*Site Nav */
 
-.link{
-    color: var(--title-text-color);
-    }
+.link {
+  color: var(--title-text-color);
+}
+.site-nav .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
 
-.site-nav{
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    margin-top: 0;
-    margin-bottom: 0;
-}      
+.site-nav {
+  display: flex;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0%;
+}
+.site-nav-item:not(:last-child) {
+  margin-right: 50px;
+}
 
 .site-nav a:hover,
 .site-nav a:focus,
 .site-nav .link.current,
 .address-list a:hover,
-.address-list a:focus{
-    color: var(--accent-color);
-    }
-
-.link:visited{
-    color: var(--title-text-color);
+.address-list a:focus {
+  color: var(--accent-color);
 }
 
-.address-list{
-    margin-top: 0;
-    margin-bottom: 0;
+.link:visited {
+  color: var(--title-text-color);
 }
-.address-list a{
-    color: var(--primary-text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+
+.address-list {
+  display: flex;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.address-nav {
+  margin-left: auto;
+}
+
+.address-list-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.address-list a {
+  color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 /* Главная страница */
 
 /* Hero */
 
-.hero{
-    background-color: var(--hero-bgr-color);
-    margin-bottom: 94px;
-    text-align: center;
+.hero {
+  background-color: var(--hero-bgr-color);
+  margin-bottom: 97px;
+  text-align: center;
 }
 
-.hero-title{
-    color: var(--primary-white-color);
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;  
-    letter-spacing: 0.06em;
-    margin-top: 0;
-    margin-bottom: 30px;
+.hero-title {
+  color: var(--primary-white-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  margin-top: 0;
+  margin-bottom: 30px;
 }
 
-
-.button{
-    display: inline-block;
-    color: var(--primary-white-color);
-    background-color: var(--accent-color);
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-    border-color: transparent;
-    border-radius: 4px;
-    padding: 10px 32px;
+.button {
+  display: inline-block;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  border-color: transparent;
+  border-radius: 4px;
+  padding: 10px 32px;
 }
 
 /* Feature */
 
-.features h3{
-    color: var(--title-text-color);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
+.features.container {
+  margin-bottom: 94px;
 }
 
-.features p{
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.7;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-.features ul{
-    margin-top: 0;
-    margin-bottom: 0;
+.feature-list {
+  display: flex;
 }
 
-/* Чем мы занимаемся и о команде */
-
-.about-us-title{
-    color: var(--title-text-color);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    margin-bottom: 50px;
+.feature-list li:not(:last-child){
+  margin-right: 30px;
 }
 
-.about-team ul{
-    margin-top: 0;
-    margin-bottom: 0;
+.features h3 {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
 }
 
-.about-team{
-    background-color: var(--secondary-background-color);
+.features p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  margin-top: 0;
+  margin-bottom: 0;
 }
+.features ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+/* Чем мы занимаемся*/
+
+.about-us.container {
+  margin-bottom: 94px;
+}
+.about-us-title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.about-us-list {
+  display: flex;
+  padding: 0;
+  margin:o;
+}
+.about-us-list li{
+  width: 370px;
+}
+
+.about-us-list li:not(:last-child){
+  margin-right: 30px;
+}
+
+.about-team ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+/* About team info */
+
+.about-team {
+  padding: 94px 215px;
+  background-color: var(--secondary-background-color);
+}
+
+.about-team-list {
+  display: flex;
+}
+.about-team-list li{
+  width: 270px;
+  background-color: var(--primary-white-color);
+}
+.about-team-list li:not(:last-child){
+  margin-right: 30px;
+}
+
 /* Имена сотрудников */
 
-.name{
-    color: var(--title-text-color);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.9;
-    text-align: center;
+.name {
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.9;
+  text-align: center;
 }
 /* Должности сотрудников */
 
-.position{
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.9;
-    text-align: center;
-    margin-top: 0;
-    margin-bottom: 0;
+.position {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.9;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 /* Футер */
 
-footer{
-    background-color:var(--hero-bgr-color);
+footer {
+  background-color: var(--hero-bgr-color);
 }
 footer .logo {
-    display: inline-block;
-    margin-bottom: 20px;
-    color: var(--primary-white-color);
+  display: inline-block;
+  margin-bottom: 20px;
+  color: var(--primary-white-color);
 }
-address{
-    font-style: normal;
+address {
+  font-style: normal;
 }
-.footer-adress{
-    color: var(--primary-white-color);
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.7;
+.footer-adress {
+  color: var(--primary-white-color);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
 }
-footer a{
-    color: rgba(255, 255, 255, 0.6);
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.7;
+footer a {
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
 }
-footer .container{
-    padding-top: 60px;
-    padding-bottom: 60px;
-
+footer .container {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 /* Portfolio main */
 
-.portfolio.container{
-    margin-top: 60px;
-    margin-bottom: 60px;
+.portfolio.container {
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
-.button-list{
-    margin-top: 0;
-    margin-bottom: 34px;
+.button-list {
+  display: flex;
+  margin-top: 0;
+  margin-bottom: 34px;
+  justify-content: center;
 }
-.portfolio-list{
-    margin-top:0;
-    margin-bottom: 0;
+
+.portfolio-list {
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
-.button-list button{
-    color: var(--title-text-color);
-    background-color: var(--secondary-background-color);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.6;
-    letter-spacing: 0.03em;
-    border-radius: 4px;
-    border-color: transparent;
-    padding: 6px 22px;
+
+.button-list button {
+  color: var(--title-text-color);
+  background-color: var(--secondary-background-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  letter-spacing: 0.03em;
+  border-radius: 4px;
+  border-color: transparent;
+  padding: 6px 22px;
+}
+
+.button-list li:not(:last-child) {
+  margin-right: 8px;
 }
 
 button:hover,
-button:focus{
-    color: var(--primary-white-color);
-    background-color: var(--accent-color);
+button:focus {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
 }
 
-.portfolio-list h2{
-    color: var(--title-text-color);
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em; 
-    margin-bottom: 4px;
+/* Делаем сетку */
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.portfolio-list p{
-    color: var(--primary-text-color);
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.9;
-    letter-spacing: 0.03em;  
-    margin-top: 0;
-    margin-bottom: 0;
+.portfolio-list li{
+  width: calc((100% - 60px) / 3);
+  /* width: 370px; */
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+/* Убираем каждому 3у элементу в списке правый отступ */
+.portfolio-list li:nth-child(3n){
+  margin-right: 0;
+}
+/* Убираем 3м последним элементам в списке нижний отступ*/
+.portfolio-list li:nth-last-child(-n+3){
+  margin-bottom: 0;
+}
+
+.portfolio-list h2 {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  margin-bottom: 4px;
+}
+
+.portfolio-list p {
+  color: var(--primary-text-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.03em;
+  margin-top: 0;
+  margin-bottom: 0;
 }
