--- a/CSS/style.css
+++ b/CSS/style.css
@@ -224,11 +224,6 @@ ul {
   margin-right: 30px;
 }
 
-.about-team ul {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
 /* About team info */
 
 .about-team {
@@ -236,11 +231,17 @@ ul {
   background-color: var(--secondary-background-color);
 }
 
+.about-team ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .about-team-list {
   display: flex;
 }
 .about-team-list li{
   width: 270px;
+  min-height: 368px;
   background-color: var(--primary-white-color);
 }
 .about-team-list li:not(:last-child){
@@ -250,7 +251,11 @@ ul {
 /* Имена сотрудников */
 
 .name {
+  margin-top: 30px;
+  margin-bottom: 10px;
+
   color: var(--title-text-color);
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.9;
@@ -259,12 +264,12 @@ ul {
 /* Должности сотрудников */
 
 .position {
+  margin-top: 0;
+  margin-bottom: 30px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.9;
   text-align: center;
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 /* Футер */
@@ -345,8 +350,13 @@ button:focus {
 }
 
 .portfolio-list li{
+  border: 1px solid #EEEEEE;
+}
+
+.portfolio-list li{
   width: calc((100% - 60px) / 3);
   /* width: 370px; */
+  min-height: 404px;
   margin-right: 30px;
   margin-bottom: 30px;
 }
@@ -360,20 +370,28 @@ button:focus {
 }
 
 .portfolio-list h2 {
+  margin-top:20px;
+  margin-right: 24px;
+  margin-bottom: 4px;
+  margin-left:24px;
+  
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  margin-bottom: 4px;
+ 
 }
 
 .portfolio-list p {
+  margin-top: 0;
+  margin-right: 24px;
+  margin-left: 24px;
+  margin-bottom: 20px;
   color: var(--primary-text-color);
+
   font-weight: 400;
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.03em;
-  margin-top: 0;
-  margin-bottom: 0;
 }
