--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,6 +35,7 @@ h3 {
 a {
   text-decoration: none;
 }
+
 ul {
   list-style: none;
   padding-left: 0;
@@ -46,6 +47,7 @@ ul {
   padding-right: 15px;
   margin: 0 auto;
 }
+
 .header {
   margin-top: 0;
   margin-bottom: 0;
@@ -68,6 +70,7 @@ ul {
   margin-bottom: 0;
   margin-right: 93px;
 }
+
 .accent {
   color: var(--accent-color);
 }
@@ -77,6 +80,7 @@ ul {
 .link {
   color: var(--title-text-color);
 }
+
 .site-nav .link {
   display: block;
   padding-top: 32px;
@@ -193,12 +197,13 @@ ul {
   margin-top: 0;
   margin-bottom: 0;
 }
+
 .features ul {
   margin-top: 0;
   margin-bottom: 0;
 }
 
-/* Чем мы занимаемся*/
+/* Чем занимается компания*/
 
 .about-us.container {
   margin-bottom: 94px;
@@ -262,6 +267,7 @@ ul {
   line-height: 1.9;
   text-align: center;
 }
+
 /* Должности сотрудников */
 
 .position {
@@ -278,26 +284,31 @@ ul {
 footer {
   background-color: var(--hero-bgr-color);
 }
+
 footer .logo {
   display: inline-block;
   margin-bottom: 20px;
   color: var(--primary-white-color);
 }
+
 address {
   font-style: normal;
 }
+
 .footer-adress {
   color: var(--primary-white-color);
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
 }
+
 footer a {
   color: rgba(255, 255, 255, 0.6);
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
 }
+
 footer .container {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -308,6 +319,7 @@ footer .container {
   margin-top: 60px;
   margin-bottom: 60px;
 }
+
 .button-list {
   display: flex;
   margin-top: 0;
@@ -361,10 +373,12 @@ button:focus {
   margin-right: 30px;
   margin-bottom: 30px;
 }
+
 /* Убираем каждому 3у элементу в списке правый отступ */
 .portfolio-list li:nth-child(3n){
   margin-right: 0;
 }
+
 /* Убираем 3м последним элементам в списке нижний отступ*/
 .portfolio-list li:nth-last-child(-n+3){
   margin-bottom: 0;
@@ -377,11 +391,11 @@ button:focus {
   margin-left:24px;
   
   color: var(--title-text-color);
+
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
-  letter-spacing: 0.06em;
- 
+  letter-spacing: 0.06em; 
 }
 
 .portfolio-list p {
@@ -389,6 +403,7 @@ button:focus {
   margin-right: 24px;
   margin-left: 24px;
   margin-bottom: 20px;
+
   color: var(--primary-text-color);
 
   font-weight: 400;
