--- a/CSS/style.css
+++ b/CSS/style.css
@@ -364,15 +364,13 @@ button:focus {
 }
 
 .portfolio-list li{
-  border: 1px solid #EEEEEE;
-}
-
-.portfolio-list li{
   width: calc((100% - 60px) / 3);
   /* width: 370px; */
   min-height: 404px;
   margin-right: 30px;
   margin-bottom: 30px;
+  padding-bottom: 20px;
+  border: 1px solid #EEEEEE;
 }
 
 /* Убираем каждому 3у элементу в списке правый отступ */
@@ -403,8 +401,7 @@ button:focus {
   margin-top: 0;
   margin-right: 24px;
   margin-left: 24px;
-  margin-bottom: 20px;
-
+  margin-bottom: 0;
   color: var(--primary-text-color);
 
   font-weight: 400;
