--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,7 +40,11 @@ ul {
   list-style: none;
   padding-left: 0;
 }
-
+img{
+  display: block;
+  width: 100%;
+  height: auto;
+}
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -57,6 +61,10 @@ ul {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #ECECEC;;
+}
+nav{
+  display: flex;
+  align-items: center;
 }
 
 /* Logo */
@@ -143,6 +151,8 @@ ul {
 .hero {
   background-color: var(--hero-bgr-color);
   text-align: center;
+  padding-top: 203px;
+  padding-bottom: 197px;
 }
 
 .hero-title {
@@ -170,7 +180,7 @@ ul {
 
 /* Feature */
 
-.features.container {
+.features .container {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -178,12 +188,15 @@ ul {
 .feature-list {
   display: flex;
 }
-
+.feature-list li {
+  width: 270px;
+}
 .feature-list li:not(:last-child){
   margin-right: 30px;
 }
 
 .features h3 {
+  text-transform: uppercase;
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 14px;
@@ -191,7 +204,6 @@ ul {
 }
 
 .features p {
-  width: 270px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
@@ -205,7 +217,7 @@ ul {
 }
 
 /* Чем занимается компания*/
-.about-us.container{
+.about-us .container{
   padding-bottom: 94px;
 }
 .about-us-title {
@@ -220,7 +232,7 @@ ul {
 .about-us-list {
   display: flex;
   padding: 0;
-  margin:o;
+  margin: 0;
 }
 .about-us-list li{
   width: 370px;
@@ -253,12 +265,9 @@ ul {
 .about-team-list li:not(:last-child){
   margin-right: 30px;
 }
-.about-team-list img{
-  display: block;
-}
+
 .team-card{
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 30px;
    /* Установит стили правой рамки */
   border-right-width: 1px;
   border-right-style: solid;
@@ -309,6 +318,7 @@ footer {
 
 footer .logo {
   display: inline-block;
+  margin-right: 0;
   margin-bottom: 20px;
   color: var(--primary-white-color);
 }
@@ -400,12 +410,6 @@ button:focus {
 /* Убираем 3м последним элементам в списке нижний отступ*/
 .portfolio-list li:nth-last-child(-n+3){
   margin-bottom: 0;
-}
-
-.portfolio-list img{
-  display: block;
-  width: 100%;
-  height: auto;
 }
 
 .card-content{
